--- a/HomePage/index.html
+++ b/HomePage/index.html
@@ -56,7 +56,7 @@
             </div>
 
             <div class="image">
-                <img src="/HomePage/AssetHome/pp2.png" alt="" class="gamb">
+                <img src="../HomePage/AssetHome/pp2.png" alt="" class="gamb">
             </div>
 
 
@@ -163,12 +163,12 @@
             <div class="wrapper" data-aos="fade-up" data-aos-easing="ease-in-out" data-aos-delay="200" data-aos-duration="1000">
                 <i id="left" class="fa-solid fa-angle-left"></i>
                 <div class="carousel">
-                    <img src="/HomePage/AssetHome/cars/imgc1.png" alt="img" draggable="false">
-                    <img src="/HomePage/AssetHome/cars/imgc2.png" alt="img" draggable="false">
-                    <img src="/HomePage/AssetHome/cars/imgc3.png" alt="img" draggable="false">
-                    <img src="/HomePage/AssetHome/cars/imgc1.png" alt="img" draggable="false">
-                    <img src="/HomePage/AssetHome/cars/imgc1.png" alt="img" draggable="false">
-                    <img src="/HomePage/AssetHome/cars/imgc1.png" alt="img" draggable="false">
+                    <img src="../HomePage/AssetHome/cars/imgc1.png" alt="img" draggable="false">
+                    <img src="../HomePage/AssetHome/cars/imgc2.png" alt="img" draggable="false">
+                    <img src="../HomePage/AssetHome/cars/imgc3.png" alt="img" draggable="false">
+                    <img src="../HomePage/AssetHome/cars/imgc1.png" alt="img" draggable="false">
+                    <img src="../HomePage/AssetHome/cars/imgc1.png" alt="img" draggable="false">
+                    <img src="../HomePage/AssetHome/cars/imgc1.png" alt="img" draggable="false">
                 </div>
                 <i id="right" class="fa-solid fa-angle-right"></i>
             </div>
