--- a/HomePage/index.html
+++ b/HomePage/index.html
@@ -62,7 +62,7 @@
             <h3 class="blabl" data-aos="fade-down" data-aos-easing="ease-in-out" data-aos-delay="100" data-aos-duration="800" data-aos-offset="50">Mastery level</h3>
 
             <div class="containerexp">
-                <div class="expfr" data-aos="fade-right" data-aos-easing="ease-in-out" data-aos-delay="100" data-aos-duration="800">
+                <div class="expfr" data-aos="fade-up" data-aos-easing="ease-in-out" data-aos-delay="200" data-aos-duration="800">
                     <h3>Frontend Development</h3>
                     <div class="expcont">
                         <article class="expdet">
@@ -111,7 +111,7 @@
 
 
                 </div>
-                <div class="expbe" data-aos="fade-left" data-aos-easing="ease-in-out" data-aos-delay="200" data-aos-duration="800">
+                <div class="expbe" data-aos="fade-up" data-aos-easing="ease-in-out" data-aos-delay="200" data-aos-duration="1000">
                     <h3>Backend Development</h3>
                     <div class="expcont">
                         <article class="expdet">
