--- a/HomePage/index.html
+++ b/HomePage/index.html
@@ -43,7 +43,7 @@
                     <h2 class="job1">Im <span class="job"></span> </h2>
                     <p class="desc">hey!, you can call me Ivan or Song, i lived at Tangerang, Contact me if you're interested to hire me.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam quis libero sed est interdum malesuada eget in libero.</p>
                     <div class="LnkeSocial">
-
+                        <a href="journey.html" class="ki">Contact Me</a>
                     </div>
 
 
@@ -51,15 +51,16 @@
             </div>
 
             <div class="image">
-                <img src="../HomePage/AssetHome/pp2.png" alt="" class="gamb">
+                <img src="/HomePage/AssetHome/pp2.png" alt="" class="gamb">
             </div>
 
 
         </section>
 
         <section class="home2">
-            <h1 class="sk" data-aos="fade-down" data-aos-easing="ease-in-out" data-aos-delay="200" data-aos-duration="800" data-aos-offset="30">Skills</h1>
-            <h3 class="blabl" data-aos="fade-down" data-aos-easing="ease-in-out" data-aos-delay="100" data-aos-duration="800" data-aos-offset="50">Mastery level</h3>
+
+            <h1 class="sk" data-aos="fade" data-aos-easing="ease-in-out" data-aos-delay="200" data-aos-duration="800">Skills</h1>
+            <h3 class="blabl" data-aos="fade" data-aos-easing="ease-in-out" data-aos-delay="100" data-aos-duration="800">Mastery level</h3>
 
             <div class="containerexp">
                 <div class="expfr" data-aos="fade-up" data-aos-easing="ease-in-out" data-aos-delay="200" data-aos-duration="800">
@@ -158,12 +159,12 @@
             <div class="wrapper" data-aos="fade-up" data-aos-easing="ease-in-out" data-aos-delay="200" data-aos-duration="1000">
                 <i id="left" class="fa-solid fa-angle-left"></i>
                 <div class="carousel">
-                    <img src="../HomePage/AssetHome/cars/imgc1.png" alt="img" draggable="false">
-                    <img src="../HomePage/AssetHome/cars/imgc2.png" alt="img" draggable="false">
-                    <img src="../HomePage/AssetHome/cars/imgc3.png" alt="img" draggable="false">
-                    <img src="../HomePage/AssetHome/cars/imgc1.png" alt="img" draggable="false">
-                    <img src="../HomePage/AssetHome/cars/imgc1.png" alt="img" draggable="false">
-                    <img src="../HomePage/AssetHome/cars/imgc1.png" alt="img" draggable="false">
+                    <img src="/HomePage/AssetHome/cars/imgc1.png" alt="img" draggable="false">
+                    <img src="/HomePage/AssetHome/cars/imgc2.png" alt="img" draggable="false">
+                    <img src="/HomePage/AssetHome/cars/imgc3.png" alt="img" draggable="false">
+                    <img src="/HomePage/AssetHome/cars/imgc1.png" alt="img" draggable="false">
+                    <img src="/HomePage/AssetHome/cars/imgc1.png" alt="img" draggable="false">
+                    <img src="/HomePage/AssetHome/cars/imgc1.png" alt="img" draggable="false">
                 </div>
                 <i id="right" class="fa-solid fa-angle-right"></i>
             </div>
