--- a/HomePage/index.html
+++ b/HomePage/index.html
@@ -43,7 +43,7 @@
                     <h2 class="job1">Im <span class="job"></span> </h2>
                     <p class="desc">hey!, you can call me Ivan or Song, i lived at Tangerang, Contact me if you're interested to hire me.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam quis libero sed est interdum malesuada eget in libero.</p>
                     <div class="LnkeSocial">
-                        <a href="journey.html" class="ki">Contact Me</a>
+                        <a href="home2" class="ki">Contact Me</a>
                     </div>
 
 
