--- a/HomePage/index.html
+++ b/HomePage/index.html
@@ -34,24 +34,26 @@
     </header>
     <div class="container">
         <section class="home">
-            <div class="home1">
+            <div class="homecont">
+                <div class="home1">
 
-                <div class="homedat">
-                    <h3 class="auto-type">Hello!, I'm<span class="typed-cursor"></span></h3>
-                    <h1 class="name">Febrian Ivan Song</h1>
+                    <div class="homedat">
+                        <h3 class="auto-type">Hello!, I'm<span class="typed-cursor"></span></h3>
+                        <h1 class="name">Febrian Ivan Song</h1>
 
-                    <h2 class="job1">Im <span class="job"></span> </h2>
-                    <p class="desc">hey!, you can call me Ivan or Song, i lived at Tangerang, Contact me if you're interested to hire me.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam quis libero sed est interdum malesuada eget in libero.</p>
-                    <div class="LnkeSocial">
-                        <a href="home2" class="ki">Contact Me</a>
+                        <h2 class="job1">Im <span class="job"></span> </h2>
+                        <p class="desc">hey!, you can call me Ivan or Song, i lived at Tangerang, Contact me if you're interested to hire me.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam quis libero sed est interdum malesuada eget in libero.</p>
+                        <div class="LnkeSocial">
+                            <a href="#project" class="ki">Contact Me</a>
+                        </div>
+
+
                     </div>
-
-
                 </div>
-            </div>
 
-            <div class="image">
-                <img src="AssetHome/pp2.png" alt="" class="gamb">
+                <div class="image">
+                    <img src="AssetHome/pp2.png" alt="" class="gamb">
+                </div>
             </div>
 
 
@@ -59,7 +61,7 @@
 
         <section class="home2">
 
-            <h1 class="sk" data-aos="fade" data-aos-easing="ease-in-out" data-aos-delay="200" data-aos-duration="800">Skills</h1>
+            <h1 class="sk" data-aos="fade" data-aos-easing="ease-in-out" data-aos-delay="200" data-aos-duration="800">SKILLS</h1>
             <h3 class="blabl" data-aos="fade" data-aos-easing="ease-in-out" data-aos-delay="100" data-aos-duration="800">Mastery level</h3>
 
             <div class="containerexp">
@@ -152,9 +154,9 @@
 
         </section>
 
-        <section class="home3">
+        <section class="home3" id="project">
             <div class="project">
-                <h1 class="judpro" data-aos="fade" data-aos-easing="ease-in-out" data-aos-delay="200" data-aos-duration="800">My Project</h1>
+                <h1 class="judpro" data-aos="fade" data-aos-easing="ease-in-out" data-aos-delay="200" data-aos-duration="800">MY PROJECT</h1>
             </div>
             <div class="wrapper" data-aos="fade-up" data-aos-easing="ease-in-out" data-aos-delay="200" data-aos-duration="1000">
                 <i id="left" class="fa-solid fa-angle-left"></i>
@@ -162,13 +164,37 @@
                     <img src="AssetHome/cars/imgc1.png" alt="img" draggable="false">
                     <img src="AssetHome/cars/imgc2.png" alt="img" draggable="false">
                     <img src="AssetHome/cars/imgc3.png" alt="img" draggable="false">
-                    <img src="AssetHome/cars/imgc1.png" alt="img" draggable="false">
-                    <img src="AssetHome/cars/imgc1.png" alt="img" draggable="false">
+                    <img src="AssetHome/cars/imgc4.png" alt="img" draggable="false">
+                    <img src="AssetHome/cars/imgc5.png" alt="img" draggable="false">
                     <img src="AssetHome/cars/imgc1.png" alt="img" draggable="false">
                 </div>
                 <i id="right" class="fa-solid fa-angle-right"></i>
             </div>
 
+
+        </section>
+
+        <section class="home4">
+            <h1 class="juds">EDUCATION</h1>
+
+            <div class="timel">
+                <div class="conts left-conts">
+                    <div class="boks">
+                        <h2>Binus University</h2>
+                        <small>2021-2025</small>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis, iure minus numquam explicabo voluptas rerum repellat cupiditate sapiente voluptatem animi, reprehenderit accusamus odit culpa obcaecati inventore, repellendus
+                            possimus placeat! Autem.</p>
+                    </div>
+                </div>
+                <div class="conts right-conts">
+                    <div class="boks">
+                        <h2>Binus University</h2>
+                        <small>2021-2025</small>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis, iure minus numquam explicabo voluptas rerum repellat cupiditate sapiente voluptatem animi, reprehenderit accusamus odit culpa obcaecati inventore, repellendus
+                            possimus placeat! Autem.</p>
+                    </div>
+                </div>
+            </div>
 
         </section>
 
@@ -179,7 +205,6 @@
 
 
     </div>
-
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
         AOS.init();
