--- a/HomePage/index.html
+++ b/HomePage/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="css/swiper-bundle.min.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
     <title>Portofolio Febrian Ivan Song</title>
 </head>
 
@@ -23,10 +24,11 @@
             <div class="btn">
                 <i class="fas fa-times close-btn"></i>
             </div>
-            <a href="#">Home</a>
-            <a href="#">My Journey</a>
-            <a href="#">About</a>
-            <a href="#">Contact</a>
+            <a href="#Home">Home</a>
+            <a href="#Skills">Skills</a>
+            <a href="#project">Project</a>
+            <a href="#Education">Education</a>
+            <a href="#contact">Contact</a>
         </div>
         <div class="btn">
             <i class="fas fa-bars menu-btn"></i>
@@ -37,7 +39,7 @@
             <div class="homecont">
                 <div class="home1">
 
-                    <div class="homedat">
+                    <div class="homedat" id="Home">
                         <h3 class="auto-type">Hello!, I'm<span class="typed-cursor"></span></h3>
                         <h1 class="name">Febrian Ivan Song</h1>
 
@@ -57,9 +59,26 @@
             </div>
 
 
+
+        </section>
+        <section class="home0" id="contact">
+
+            <h1 class="sk" data-aos="fade" data-aos-easing="ease-in-out" data-aos-delay="200" data-aos-duration="800">CONTACT</h1>
+
+            <div class="social-menu" data-aos="fade-up" data-aos-easing="ease-in-out" data-aos-delay="200" data-aos-duration="800">
+                <ul>
+                    <li class="left-conts"><a href="https://github.com/febrian-ivan888" target="blank"><i class="fab fa-github"></i></i></a></li>
+                    <li class="left-conts"><a href="https://www.instagram.com/imsanketbodke/" target="blank"><i class="fab fa-instagram"></i></a></li>
+                    <li class="right-conts"><a href="https://www.linkedin.com/in/febrian-ivan-song-75a203293/" target="blank"><i class="fab fa-linkedin-in"></i></a></li>
+                    <li class="right-conts"><a href="#"><i class="fab fa-codepen" target="blank"></i></a></li>
+                </ul>
+            </div>
+
         </section>
 
-        <section class="home2">
+
+
+        <section class="home2" id="Skills">
 
             <h1 class="sk" data-aos="fade" data-aos-easing="ease-in-out" data-aos-delay="200" data-aos-duration="800">SKILLS</h1>
             <h3 class="blabl" data-aos="fade" data-aos-easing="ease-in-out" data-aos-delay="100" data-aos-duration="800">Mastery level</h3>
@@ -158,15 +177,16 @@
             <div class="project">
                 <h1 class="judpro" data-aos="fade" data-aos-easing="ease-in-out" data-aos-delay="200" data-aos-duration="800">MY PROJECT</h1>
             </div>
+            <h1 class="judpro1" data-aos="fade" data-aos-easing="ease-in-out" data-aos-delay="200" data-aos-duration="1000">ⓘ Click to go to project</h1>
             <div class="wrapper" data-aos="fade-up" data-aos-easing="ease-in-out" data-aos-delay="200" data-aos-duration="1000">
                 <i id="left" class="fa-solid fa-angle-left"></i>
                 <div class="carousel">
-                    <img src="AssetHome/cars/imgc1.png" alt="img" draggable="false">
-                    <img src="AssetHome/cars/imgc2.png" alt="img" draggable="false">
-                    <img src="AssetHome/cars/imgc3.png" alt="img" draggable="false">
-                    <img src="AssetHome/cars/imgc4.png" alt="img" draggable="false">
-                    <img src="AssetHome/cars/imgc5.png" alt="img" draggable="false">
-                    <img src="AssetHome/cars/imgc1.png" alt="img" draggable="false">
+                    <a class="udin" href="https://febrian-ivan888.github.io/piscis/aquarium/" target="_blank" draggable="false"> <img src="AssetHome/cars/imgc1.png" alt="img" draggable="false"> </a>
+                    <a class="udin" href="https://febrian-ivan888.github.io/Adexlegends/project%20assets/index.html" target="_blank" draggable="false"> <img src="AssetHome/cars/imgc2.png" alt="img" draggable="false"> </a>
+                    <a class="udin" href="https://github.com/wilbertcoandsss/EbookZ" target="_blank" draggable="false"> <img src="AssetHome/cars/imgc3.png" alt="img" draggable="false"> </a>
+                    <a class="udin" href="https://www.figma.com/proto/H63vfzz1IPjjPsXlrGtUMK/Aplikasi-%22Teman-Kami%22?type=design&node-id=2-2&t=GcD4lqo2iTJ4XUD8-0&scaling=scale-down&page-id=0%3A1&starting-point-node-id=2%3A2" target="_blank" draggable="false"> <img src="AssetHome/cars/imgc5.png" alt="img" draggable="false"> </a>
+                    <a class="udin" href="https://www.figma.com/proto/WsnnkolcgTLQbGuW7JaxBx/Untitled?type=design&node-id=1-2&t=GcD4lqo2iTJ4XUD8-0&scaling=scale-down&page-id=0%3A1" target="_blank" draggable="false"> <img src="AssetHome/cars/imgc4.png" alt="img" draggable="false"> </a>
+                    <a class="udin" href="https://www.youtube.com/watch?v=LB3Gt5WQht8" target="_blank" draggable="false"> <img src="AssetHome/cars/imgc6.png" alt="img" draggable="false"> </a>
                 </div>
                 <i id="right" class="fa-solid fa-angle-right"></i>
             </div>
@@ -174,27 +194,32 @@
 
         </section>
 
-        <section class="home4">
-            <h1 class="juds">EDUCATION</h1>
+        <section class="home4" id="Education">
+            <h1 class="judpro" data-aos="fade-up" data-aos-easing="ease-in-out" data-aos-delay="200" data-aos-duration="1000">EDUCATION</h1>
 
-            <div class="timel">
-                <div class="conts left-conts">
-                    <div class="boks">
-                        <h2>Binus University</h2>
-                        <small>2021-2025</small>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis, iure minus numquam explicabo voluptas rerum repellat cupiditate sapiente voluptatem animi, reprehenderit accusamus odit culpa obcaecati inventore, repellendus
-                            possimus placeat! Autem.</p>
+            <div class="timel" data-aos="fade-up" data-aos-easing="ease-in-out" data-aos-delay="200" data-aos-duration="1000">
+                <div class="conts left-conts ">
+                    <div class="boks ">
+                        <h2>SMAK BPK Penabur Cirebon</h2>
+                        <small>2017-2020</small>
+                        <p>SMAK (Sekolah Menengah Atas Kristen) BPK Penabur Cirebon is one of the senior high schools under the umbrella of the Christian Education Foundation Penabur (BPK Penabur) in Cirebon, Indonesia.</p>
                     </div>
                 </div>
-                <div class="conts right-conts">
-                    <div class="boks">
+                <div class="conts right-conts ">
+                    <div class="boks ">
                         <h2>Binus University</h2>
                         <small>2021-2025</small>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis, iure minus numquam explicabo voluptas rerum repellat cupiditate sapiente voluptatem animi, reprehenderit accusamus odit culpa obcaecati inventore, repellendus
-                            possimus placeat! Autem.</p>
+                        <p>BINUS University Alam Sutera is a reputable institution of higher education located in Alam Sutera, Tangerang, Indonesia. It is known for its commitment to providing quality education and fostering innovation in various fields..</p>
                     </div>
                 </div>
             </div>
+
+        </section>
+
+        <section class="home5" id="asdasd">
+
+
+
 
         </section>
 
@@ -205,14 +230,14 @@
 
 
     </div>
-    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js "></script>
     <script>
         AOS.init();
     </script>
-    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-    <script src="js/swiper-bundle.min.js"></script>
-    <script src="js/script.js"></script>
+    <script type="module " src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js "></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js "></script>
+    <script src="js/swiper-bundle.min.js "></script>
+    <script src="js/script.js "></script>
 
 </body>
 
