--- a/HomePage/index.html
+++ b/HomePage/index.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="css/swiper-bundle.min.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 
     <title>Portofolio Febrian Ivan Song</title>
 </head>
@@ -25,10 +27,11 @@
                 <i class="fas fa-times close-btn"></i>
             </div>
             <a href="#Home">Home</a>
+            <a href="#contact">Contact</a>
             <a href="#Skills">Skills</a>
             <a href="#project">Project</a>
             <a href="#Education">Education</a>
-            <a href="#contact">Contact</a>
+
         </div>
         <div class="btn">
             <i class="fas fa-bars menu-btn"></i>
@@ -186,7 +189,7 @@
                     <a class="udin" href="https://github.com/wilbertcoandsss/EbookZ" target="_blank" draggable="false"> <img src="AssetHome/cars/imgc3.png" alt="img" draggable="false"> </a>
                     <a class="udin" href="https://www.figma.com/proto/H63vfzz1IPjjPsXlrGtUMK/Aplikasi-%22Teman-Kami%22?type=design&node-id=2-2&t=GcD4lqo2iTJ4XUD8-0&scaling=scale-down&page-id=0%3A1&starting-point-node-id=2%3A2" target="_blank" draggable="false"> <img src="AssetHome/cars/imgc5.png" alt="img" draggable="false"> </a>
                     <a class="udin" href="https://www.figma.com/proto/WsnnkolcgTLQbGuW7JaxBx/Untitled?type=design&node-id=1-2&t=GcD4lqo2iTJ4XUD8-0&scaling=scale-down&page-id=0%3A1" target="_blank" draggable="false"> <img src="AssetHome/cars/imgc4.png" alt="img" draggable="false"> </a>
-                    <a class="udin" href="https://www.youtube.com/watch?v=LB3Gt5WQht8" target="_blank" draggable="false"> <img src="AssetHome/cars/imgc6.png" alt="img" draggable="false"> </a>
+                    <a class="udin" href="https://www.youtube.com/watch?v=LB3Gt5WQht8" target="_blank" draggable="false"> <img src="AssetHome/cars/imgc1.png" alt="img" draggable="false"> </a>
                 </div>
                 <i id="right" class="fa-solid fa-angle-right"></i>
             </div>
