--- a/HomePage/index.html
+++ b/HomePage/index.html
@@ -49,7 +49,9 @@
                         <h2 class="job1">Im <span class="job"></span> </h2>
                         <p class="desc">hey!, you can call me Ivan or Song, i lived at Tangerang, Contact me if you're interested to hire me.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam quis libero sed est interdum malesuada eget in libero.</p>
                         <div class="LnkeSocial">
-                            <a href="#project" class="ki">Contact Me</a>
+                            <a href="#contact" class="ki">CONTACT ME</a>
+                            <a href="#contact" class="ki">DOWNLOAD CV</a>
+
                         </div>
 
 
@@ -70,10 +72,15 @@
 
             <div class="social-menu" data-aos="fade-up" data-aos-easing="ease-in-out" data-aos-delay="200" data-aos-duration="800">
                 <ul>
-                    <li class="left-conts"><a href="https://github.com/febrian-ivan888" target="blank"><i class="fab fa-github"></i></i></a></li>
-                    <li class="left-conts"><a href="https://www.instagram.com/imsanketbodke/" target="blank"><i class="fab fa-instagram"></i></a></li>
-                    <li class="right-conts"><a href="https://www.linkedin.com/in/febrian-ivan-song-75a203293/" target="blank"><i class="fab fa-linkedin-in"></i></a></li>
-                    <li class="right-conts"><a href="#"><i class="fab fa-codepen" target="blank"></i></a></li>
+                    <li class="left-conts"><a href="https://github.com/febrian-ivan888" target="_blank"><i class="fab fa-github"></i></i></a></li>
+                    <li class="left-conts"><a href="https://instagram.com/ivnsong?igshid=NzZlODBkYWE4Ng%3D%3D&utm_source=qr" target="_blank"><i class="fab fa-instagram"></i></a></li>
+                    <li class="right-conts"><a href="https://www.linkedin.com/in/febrian-ivan-song-75a203293/" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
+                    <li id="email">
+                        <a href="mailto:ivanfebrian812@gmail.com" id="email" target="_blank">
+                            <ion-icon name="mail-outline"></ion-icon>
+                        </a>
+                    </li>
+
                 </ul>
             </div>
 
@@ -178,7 +185,7 @@
 
         <section class="home3" id="project">
             <div class="project">
-                <h1 class="judpro" data-aos="fade" data-aos-easing="ease-in-out" data-aos-delay="200" data-aos-duration="800">MY PROJECT</h1>
+                <h1 class="judpro" data-aos="fade" data-aos-easing="ease-in-out" data-aos-delay="200" data-aos-duration="800">PROJECT</h1>
             </div>
             <h1 class="judpro1" data-aos="fade" data-aos-easing="ease-in-out" data-aos-delay="200" data-aos-duration="1000">ⓘ Click to go to project</h1>
             <div class="wrapper" data-aos="fade-up" data-aos-easing="ease-in-out" data-aos-delay="200" data-aos-duration="1000">
@@ -219,6 +226,43 @@
 
         </section>
 
+
+        <footer>
+            <ul class="sociali">
+                <li>
+                    <a href="https://github.com/febrian-ivan888" target="_blank">
+                        <ion-icon name="logo-github"></ion-icon>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://instagram.com/ivnsong?igshid=NzZlODBkYWE4Ng%3D%3D&utm_source=qr" target="_blank">
+                        <ion-icon name="logo-instagram"></ion-icon>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.linkedin.com/in/febrian-ivan-song-75a203293/" target="_blank">
+                        <ion-icon name="logo-linkedin"></ion-icon>
+                    </a>
+                </li>
+                <li>
+                    <a href="mailto:ivanfebrian812@gmail.com" target="_blank">
+                        <ion-icon name="mail-outline"></ion-icon>
+                    </a>
+                </li>
+            </ul>
+            <ul class="menu">
+                <li><a href="#Home">Home</a></li>
+                <li> <a href="#contact">Contact</a></li>
+                <li> <a href="#Skills">Skills</a></li>
+                <li> <a href="#project">Project</a></li>
+                <li> <a href="#Education">Education</a></li>
+
+            </ul>
+            <div class="LnkeSocials">
+                <a href="#contact" class="kis">Download CV</a>
+            </div>
+            <p>@2023 Febrian Ivan Song | All Rights Reserved</p>
+        </footer>
 
 
 
