--- a/HomePage/index.html
+++ b/HomePage/index.html
@@ -44,10 +44,11 @@
 
                     <div class="homedat" id="Home">
 
+                        <h2 class="jo">Hello!, Im</h2>
                         <h1 class="name">Febrian Ivan Song</h1>
-
                         <h2 class="job1">Im <span class="job"></span> </h2>
-                        <p class="desc">hey!, you can call me Ivan or Song, i lived at Tangerang, Contact me if you're interested to hire me.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam quis libero sed est interdum malesuada eget in libero.</p>
+                        <p class="desc">Greetings, I'm Ivan, but you can also call me Song, and I call the vibrant city of Tangerang my home. It's a pleasure to connect with you, and I'm excited to share more about myself and my professional journey. I'm actively seeking
+                            new career opportunities and collaborations, so if you're looking for a dedicated and hardworking, I'd love to chat further.</p>
                         <div class="LnkeSocial">
                             <a href="#contact" class="ki">CONTACT ME</a>
                             <a href="#contact" class="ki">DOWNLOAD CV</a>
@@ -246,7 +247,7 @@
                 </li>
                 <li>
                     <a href="mailto:ivanfebrian812@gmail.com" target="_blank">
-                        <ion-icon name="mail-outline"></ion-icon>
+                        <ion-icon name="mail-outline" class="usus"></ion-icon>
                     </a>
                 </li>
             </ul>
