--- a/HomePage/index.html
+++ b/HomePage/index.html
@@ -51,7 +51,7 @@
                             new career opportunities and collaborations, so if you're looking for a dedicated and hardworking, I'd love to chat further.</p>
                         <div class="LnkeSocial">
                             <a href="#contact" class="ki">CONTACT ME</a>
-                            <a href="#contact" class="ki">DOWNLOAD CV</a>
+                            <a href="/HomePage/AssetHome/CVI.pdf" download="/HomePage/AssetHome/CVI.pdf" class="ki">DOWNLOAD CV</a>
 
                         </div>
 
@@ -197,7 +197,6 @@
                     <a class="udin" href="https://github.com/wilbertcoandsss/EbookZ" target="_blank" draggable="false"> <img src="AssetHome/cars/imgc3.png" alt="img" draggable="false"> </a>
                     <a class="udin" href="https://www.figma.com/proto/H63vfzz1IPjjPsXlrGtUMK/Aplikasi-%22Teman-Kami%22?type=design&node-id=2-2&t=GcD4lqo2iTJ4XUD8-0&scaling=scale-down&page-id=0%3A1&starting-point-node-id=2%3A2" target="_blank" draggable="false"> <img src="AssetHome/cars/imgc5.png" alt="img" draggable="false"> </a>
                     <a class="udin" href="https://www.figma.com/proto/WsnnkolcgTLQbGuW7JaxBx/Untitled?type=design&node-id=1-2&t=GcD4lqo2iTJ4XUD8-0&scaling=scale-down&page-id=0%3A1" target="_blank" draggable="false"> <img src="AssetHome/cars/imgc4.png" alt="img" draggable="false"> </a>
-                    <a class="udin" href="https://www.youtube.com/watch?v=LB3Gt5WQht8" target="_blank" draggable="false"> <img src="AssetHome/cars/imgc1.png" alt="img" draggable="false"> </a>
                 </div>
                 <i id="right" class="fa-solid fa-angle-right"></i>
             </div>
@@ -260,7 +259,7 @@
 
             </ul>
             <div class="LnkeSocials">
-                <a href="#contact" class="kis">Download CV</a>
+                <a href="/HomePage/AssetHome/CVI.pdf" download="/HomePage/AssetHome/CVI.pdf" class="kis">Download CV</a>
             </div>
             <p>@2023 Febrian Ivan Song | All Rights Reserved</p>
         </footer>
