--- a/HomePage/index.html
+++ b/HomePage/index.html
@@ -51,7 +51,7 @@
                             new career opportunities and collaborations, so if you're looking for a dedicated and hardworking, I'd love to chat further.</p>
                         <div class="LnkeSocial">
                             <a href="#contact" class="ki">CONTACT ME</a>
-                            <a href="/HomePage/AssetHome/CVI.pdf" download="/HomePage/AssetHome/CVI.pdf" class="ki">DOWNLOAD CV</a>
+                            <a href="/HomePage/CVI.pdf" download="CVI.pdf" class="ki">DOWNLOAD CV</a>
 
                         </div>
 
@@ -259,7 +259,7 @@
 
             </ul>
             <div class="LnkeSocials">
-                <a href="/HomePage/AssetHome/CVI.pdf" download="/HomePage/AssetHome/CVI.pdf" class="kis">Download CV</a>
+                <a href="/HomePage/CVI.pdf" download="CVI.pdf" class="kis">Download CV</a>
             </div>
             <p>@2023 Febrian Ivan Song | All Rights Reserved</p>
         </footer>
