--- a/HomePage/index.html
+++ b/HomePage/index.html
@@ -102,14 +102,14 @@
                             <ion-icon name="checkmark-circle-outline"></ion-icon>
                             <div>
                                 <h4>HTML</h4>
-                                <small class="light">Intermidiate</small>
+                                <small class="light">intermediate</small>
                             </div>
                         </article>
                         <article class="expdet">
                             <ion-icon name="checkmark-circle-outline"></ion-icon>
                             <div>
                                 <h4>CSS</h4>
-                                <small class="light">Intermidiate</small>
+                                <small class="light">intermediate</small>
                             </div>
                         </article>
                         <article class="expdet">
@@ -123,7 +123,7 @@
                             <ion-icon name="checkmark-circle-outline"></ion-icon>
                             <div>
                                 <h4>JavaScript</h4>
-                                <small class="light">Intermidiate</small>
+                                <small class="light">intermediate</small>
                             </div>
                         </article>
                         <article class="expdet">
@@ -151,21 +151,21 @@
                             <ion-icon name="checkmark-circle-outline"></ion-icon>
                             <div>
                                 <h4>MySQL</h4>
-                                <small class="light">Intermidiate</small>
+                                <small class="light">intermediate</small>
                             </div>
                         </article>
                         <article class="expdet">
                             <ion-icon name="checkmark-circle-outline"></ion-icon>
                             <div>
                                 <h4>PHP</h4>
-                                <small class="light">Intermidiate</small>
+                                <small class="light">intermediate</small>
                             </div>
                         </article>
                         <article class="expdet">
                             <ion-icon name="checkmark-circle-outline"></ion-icon>
                             <div>
                                 <h4>SQL</h4>
-                                <small class="light">Intermidiate</small>
+                                <small class="light">intermediate</small>
                             </div>
                         </article>
                         <article class="expdet">
@@ -197,6 +197,9 @@
                     <a class="udin" href="https://github.com/wilbertcoandsss/EbookZ" target="_blank" draggable="false"> <img src="AssetHome/cars/imgc3.png" alt="img" draggable="false"> </a>
                     <a class="udin" href="https://www.figma.com/proto/H63vfzz1IPjjPsXlrGtUMK/Aplikasi-%22Teman-Kami%22?type=design&node-id=2-2&t=GcD4lqo2iTJ4XUD8-0&scaling=scale-down&page-id=0%3A1&starting-point-node-id=2%3A2" target="_blank" draggable="false"> <img src="AssetHome/cars/imgc5.png" alt="img" draggable="false"> </a>
                     <a class="udin" href="https://www.figma.com/proto/WsnnkolcgTLQbGuW7JaxBx/Untitled?type=design&node-id=1-2&t=GcD4lqo2iTJ4XUD8-0&scaling=scale-down&page-id=0%3A1" target="_blank" draggable="false"> <img src="AssetHome/cars/imgc4.png" alt="img" draggable="false"> </a>
+                    <a class="udin" href="https://www.figma.com/proto/9qDUztONYr6CGjAlZlSM4y/exposen.?node-id=105-701&starting-point-node-id=105%3A701&mode=design&t=rXIULbhBATlGR5fF-1" target="_blank"> <img src="./AssetHome/cars/imgc7.png" alt="img" draggable="false"></a>
+                    <a class="udin" href="https://codesandbox.io/p/sandbox/99group-assignment-f8f489?layout=%257B%2522sidebarPanel%2522%253A%2522EXPLORER%2522%252C%2522rootPanelGroup%2522%253A%257B%2522direction%2522%253A%2522horizontal%2522%252C%2522contentType%2522%253A%2522UNKNOWN%2522%252C%2522type%2522%253A%2522PANEL_GROUP%2522%252C%2522id%2522%253A%2522ROOT_LAYOUT%2522%252C%2522panels%2522%253A%255B%257B%2522type%2522%253A%2522PANEL_GROUP%2522%252C%2522contentType%2522%253A%2522UNKNOWN%2522%252C%2522direction%2522%253A%2522vertical%2522%252C%2522id%2522%253A%2522clpcadcet0007356gnug9tf2l%2522%252C%2522sizes%2522%253A%255B70%252C30%255D%252C%2522panels%2522%253A%255B%257B%2522type%2522%253A%2522PANEL_GROUP%2522%252C%2522contentType%2522%253A%2522EDITOR%2522%252C%2522direction%2522%253A%2522horizontal%2522%252C%2522id%2522%253A%2522EDITOR%2522%252C%2522panels%2522%253A%255B%257B%2522type%2522%253A%2522PANEL%2522%252C%2522contentType%2522%253A%2522EDITOR%2522%252C%2522id%2522%253A%2522clpcadcet0003356gxcwncbmm%2522%257D%255D%257D%252C%257B%2522type%2522%253A%2522PANEL_GROUP%2522%252C%2522contentType%2522%253A%2522SHELLS%2522%252C%2522direction%2522%253A%2522horizontal%2522%252C%2522id%2522%253A%2522SHELLS%2522%252C%2522panels%2522%253A%255B%257B%2522type%2522%253A%2522PANEL%2522%252C%2522contentType%2522%253A%2522SHELLS%2522%252C%2522id%2522%253A%2522clpcadcet0004356gahisvpqd%2522%257D%255D%252C%2522sizes%2522%253A%255B100%255D%257D%255D%257D%252C%257B%2522type%2522%253A%2522PANEL_GROUP%2522%252C%2522contentType%2522%253A%2522DEVTOOLS%2522%252C%2522direction%2522%253A%2522vertical%2522%252C%2522id%2522%253A%2522DEVTOOLS%2522%252C%2522panels%2522%253A%255B%257B%2522type%2522%253A%2522PANEL%2522%252C%2522contentType%2522%253A%2522DEVTOOLS%2522%252C%2522id%2522%253A%2522clpcadcet0006356g4k4mcr49%2522%257D%255D%252C%2522sizes%2522%253A%255B100%255D%257D%255D%252C%2522sizes%2522%253A%255B40%252C60%255D%257D%252C%2522tabbedPanels%2522%253A%257B%2522clpcadcet0003356gxcwncbmm%2522%253A%257B%2522id%2522%253A%2522clpcadcet0003356gxcwncbmm%2522%252C%2522tabs%2522%253A%255B%257B%2522id%2522%253A%2522clpcb1w530003356gp0ovzfnu%2522%252C%2522mode%2522%253A%2522permanent%2522%252C%2522type%2522%253A%2522FILE%2522%252C%2522initialSelections%2522%253A%255B%257B%2522startLineNumber%2522%253A23%252C%2522startColumn%2522%253A27%252C%2522endLineNumber%2522%253A23%252C%2522endColumn%2522%253A27%257D%255D%252C%2522filepath%2522%253A%2522%252Fsrc%252Fstyles.css%2522%252C%2522state%2522%253A%2522IDLE%2522%257D%255D%252C%2522activeTabId%2522%253A%2522clpcb1w530003356gp0ovzfnu%2522%257D%252C%2522clpcadcet0006356g4k4mcr49%2522%253A%257B%2522tabs%2522%253A%255B%257B%2522id%2522%253A%2522clpcadcet0005356gxlx2ppfu%2522%252C%2522mode%2522%253A%2522permanent%2522%252C%2522type%2522%253A%2522UNASSIGNED_PORT%2522%252C%2522port%2522%253A0%252C%2522path%2522%253A%2522%2522%257D%255D%252C%2522id%2522%253A%2522clpcadcet0006356g4k4mcr49%2522%252C%2522activeTabId%2522%253A%2522clpcadcet0005356gxlx2ppfu%2522%257D%252C%2522clpcadcet0004356gahisvpqd%2522%253A%257B%2522tabs%2522%253A%255B%255D%252C%2522id%2522%253A%2522clpcadcet0004356gahisvpqd%2522%257D%257D%252C%2522showDevtools%2522%253Atrue%252C%2522showShells%2522%253Atrue%252C%2522showSidebar%2522%253Atrue%252C%2522sidebarPanelSize%2522%253A15%257D"
+                        target="_blank"> <img src="./AssetHome/cars/imgc6.png" alt="img" draggable="false"></a>
                 </div>
                 <i id="right" class="fa-solid fa-angle-right"></i>
             </div>
@@ -210,16 +213,16 @@
             <div class="timel" data-aos="fade-up" data-aos-easing="ease-in-out" data-aos-delay="200" data-aos-duration="1000">
                 <div class="conts left-conts ">
                     <div class="boks ">
-                        <h2>SMAK BPK Penabur Cirebon</h2>
-                        <small>2017-2020</small>
-                        <p>SMAK (Sekolah Menengah Atas Kristen) BPK Penabur Cirebon is one of the senior high schools under the umbrella of the Christian Education Foundation Penabur (BPK Penabur) in Cirebon, Indonesia.</p>
+                        <h2>Penabur Cirebon Christian Senior High School</h2>
+                        <small>2018-2021</small>
+                        <p>Penabur Cirebon Christian Senior High School is one of the senior high schools under the umbrella of the Christian Education Foundation Penabur (BPK Penabur) in Cirebon, Indonesia.</p>
                     </div>
                 </div>
                 <div class="conts right-conts ">
                     <div class="boks ">
                         <h2>Binus University</h2>
                         <small>2021-2025</small>
-                        <p>BINUS University Alam Sutera is a reputable institution of higher education located in Alam Sutera, Tangerang, Indonesia. It is known for its commitment to providing quality education and fostering innovation in various fields..</p>
+                        <p>BINUS University Alam Sutera is a reputable institution of higher education located in Alam Sutera, Tangerang, Indonesia. It is known for its commitment to provide: quality education and fostering innovation in various fields.</p>
                     </div>
                 </div>
             </div>
